@@ -109,10 +109,10 @@ public class TagCheckService {
 	
 	@Resource
 	GroupeService groupeService;
-	
+
 	@Autowired
 	PersonRepository personRepository;
-	
+
 	@Autowired
 	GuestRepository guestRepository;
 	
@@ -142,7 +142,10 @@ public class TagCheckService {
 	
 	@Resource
 	LogService logService;
-	
+
+	@Resource
+	LdapService ldapService;
+
 	@Resource
 	PersonService personService;  
 	
@@ -157,7 +160,7 @@ public class TagCheckService {
 	
 	@Autowired
 	EsupSignatureRepository esupSignatureRepository;
-	
+
 	@Value("${app.nomDomaine}")
 	private String nomDomaine;
 	
@@ -211,7 +214,15 @@ public class TagCheckService {
     			allTagChecks =  tagCheckRepository.findTagCheckBySessionLocationExpectedId(id, pageable);
     		}
     	}
+		List<String> tcList = allTagChecks.stream().filter(tagCheck -> tagCheck.getPerson()!=null).map(tagCheck -> tagCheck.getPerson().getEppn())
+				.collect(Collectors.toList());
+		Map<String, LdapUser> mapLdapUsers = ldapService.getLdapUsersFromNumList(tcList, "eduPersonPrincipalName");
+
 		if(!allTagChecks.getContent().isEmpty()) {
+			List<String> tagCheckerList = allTagChecks.stream().filter(tagCheck -> tagCheck.getTagChecker()!=null).map(tagCheck -> tagCheck.getTagChecker().getUserApp().getEppn())
+					.collect(Collectors.toList());
+			Map<String, LdapUser> mapLdapUsers2 = ldapService.getLdapUsersFromNumList(tagCheckerList, "eduPersonPrincipalName");
+			
 			for(TagCheck tc : allTagChecks.getContent()) {
 				if(tc.getSessionLocationBadged() != null && tc.getSessionLocationExpected() == null) {
 					tc.setIsUnknown(true);
@@ -219,22 +230,27 @@ public class TagCheckService {
 					tc.setIsUnknown(false);
 				}
 				if(tc.getPerson() != null) {
-				List<LdapUser> ldapUsers = ldapUserRepository.findByEppnEquals(tc.getPerson().getEppn());
-					if(!ldapUsers.isEmpty()) {
-						tc.getPerson().setNom(ldapUsers.get(0).getName());
-						tc.getPerson().setPrenom(ldapUsers.get(0).getPrenom());
-						tc.setNomPrenom(ldapUsers.get(0).getName().concat(ldapUsers.get(0).getPrenom()));
+					if(!mapLdapUsers.isEmpty()) {
+						LdapUser ldapUser = mapLdapUsers.get(tc.getPerson().getEppn());
+						if(ldapUser!=null) {
+							tc.getPerson().setNom(ldapUser.getName());
+							tc.getPerson().setPrenom(ldapUser.getPrenom());
+							tc.setNomPrenom(ldapUser.getName().concat(ldapUser.getPrenom()));
+						}
 					}else {
 						tc.setNomPrenom("");
 					}
 				}
 				if(tc.getTagChecker() != null) {
-					List<LdapUser> ldaps2User = ldapUserRepository.findByEppnEquals(tc.getTagChecker().getUserApp().getEppn());
-					if(!ldaps2User.isEmpty()) {
-						tc.getTagChecker().getUserApp().setNom(ldaps2User.get(0).getName());
-						tc.getTagChecker().getUserApp().setPrenom(ldaps2User.get(0).getPrenom());
+					String eppn = tc.getTagChecker().getUserApp().getEppn();
+					if(!mapLdapUsers2.isEmpty()) {
+						LdapUser ldapUser2 = mapLdapUsers2.get(eppn);
+						if(ldapUser2!=null) {
+							tc.getTagChecker().getUserApp().setNom(mapLdapUsers2.get(eppn).getName());
+							tc.getTagChecker().getUserApp().setPrenom(mapLdapUsers2.get(eppn).getPrenom());
+						}
 					}
-					if(ldaps2User.isEmpty() && tc.getTagChecker().getUserApp().getEppn().startsWith(paramUtil.getGenericUser())) {
+					if(mapLdapUsers2.isEmpty() && tc.getTagChecker().getUserApp().getEppn().startsWith(paramUtil.getGenericUser())) {
 						tc.getTagChecker().getUserApp().setNom(tc.getTagChecker().getUserApp().getContext().getKey());
 						tc.getTagChecker().getUserApp().setPrenom(StringUtils.capitalize(paramUtil.getGenericUser()));
 					}
@@ -248,17 +264,17 @@ public class TagCheckService {
     
     public List<Integer> importTagCheckCsv(Reader reader,  List<List<String>> finalList, Long sessionEpreuveId, 
     		String emargementContext, Map<String,String> mapEtapes, Boolean checkLdap, Long sessionLocationId) throws Exception {
-    	List<List<String>> rows  = new ArrayList<List<String>>();
-    	List<Integer> bilanCsv = new ArrayList<Integer>();
+    	List<List<String>> rows  = new ArrayList<>();
+    	List<Integer> bilanCsv = new ArrayList<>();
     	if(reader!=null) {
     		rows  = importExportService.readAll(reader);
     	}else if(finalList != null) {
     		rows = finalList;
     	}
     	if(rows != null) {	    	
-	    	List<TagCheck> tcToSave = new ArrayList<TagCheck>();
-	    	List<String> unknowns = new ArrayList<String>();
-	    	List<String> missingData = new ArrayList<String>();
+	    	List<TagCheck> tcToSave = new ArrayList<>();
+	    	List<String> unknowns = new ArrayList<>();
+	    	List<String> missingData = new ArrayList<>();
 	    	//De la forme [NumEtu,CodeGestion]
     		boolean isRepartitionLocationOk = true;
     		if(sessionLocationId != null) {
@@ -280,7 +296,7 @@ public class TagCheckService {
 			    			boolean isFromDomain = false;
 			    			String line = row.get(0).trim();
 			    			line = line.replace("\"","");
-			    			Long tcTest = new Long(0);
+			    			Long tcTest = 0L;
 			    			//Pour Guest
 			    			String [] splitLine = null;
 			    			if(line.contains(",")) {
@@ -342,7 +358,7 @@ public class TagCheckService {
 											isFromDomain = true;
 										}
 										else {
-											List<Guest> existingGuests = new ArrayList<Guest>();
+											List<Guest> existingGuests = new ArrayList<>();
 											if(splitLine != null && splitLine.length>1) {
 												existingGuests = guestRepository.findByEmail(splitLine[0]);
 												if(!existingGuests.isEmpty()) {
@@ -440,9 +456,9 @@ public class TagCheckService {
     
     
     public List<List<String>> getListForimport(List<String> usersGroupLdap) {
-    	List<List<String>> rows  = new ArrayList<List<String>>();
+    	List<List<String>> rows  = new ArrayList<>();
     	for(String user: usersGroupLdap) {
-    		List<String> subList = new ArrayList<String>();
+    		List<String> subList = new ArrayList<>();
     		subList.add(user);
     		rows.add(subList);
     	}
@@ -452,7 +468,7 @@ public class TagCheckService {
     
     public  List<List<String>> setAddList(TagCheck tc){
     	
-        List<String> strings = new ArrayList<String>();
+        List<String> strings = new ArrayList<>();
         if(tc.getPerson() != null) {
 	        if(!tc.getPerson().getNumIdentifiant().isEmpty()){
 	        	 strings.add(tc.getPerson().getNumIdentifiant());
@@ -462,7 +478,7 @@ public class TagCheckService {
         }else if(tc.getGuest() != null) {
         	strings.add(tc.getGuest().getEmail().concat(";").concat(tc.getGuest().getNom()).concat(";").concat(tc.getGuest().getPrenom()));
         }
-        List<List<String>> finalList = new ArrayList<List<String>>();
+        List<List<String>> finalList = new ArrayList<>();
         finalList.add(strings);
         return finalList;
     }
@@ -484,10 +500,12 @@ public class TagCheckService {
 		
 		if(!tagChecks.isEmpty()) {
 			for(TagCheck tc : tagChecks) {
+				List<String> eppnList = tagChecks.stream().filter(tagCheck -> tagCheck.getPerson()!=null)
+					    .map(tagCheck -> tagCheck.getPerson().getEppn())
+					    .collect(Collectors.toList());
+				Map<String, LdapUser> mapLdapUsers = ldapService.getLdapUsersFromNumList(eppnList, "eduPersonPrincipalName");
 				if(tc.getPerson()!=null) {
-					List<LdapUser> ldapUsers = ldapUserRepository.findByEppnEquals(tc.getPerson().getEppn());
-					//LdapUser ldapUser = mapTc.get(tc.getPerson().getEppn());
-					LdapUser ldapUser =  ldapUsers.get(0);
+					LdapUser ldapUser = mapLdapUsers.get(tc.getPerson().getEppn());
 					if(ldapUser!=null) {
 						tc.getPerson().setCivilite(ldapUser.getCivilite());
 						tc.getPerson().setNom(ldapUser.getName());
@@ -500,10 +518,13 @@ public class TagCheckService {
 					tc.setNomPrenom(tc.getGuest().getNom().concat(tc.getGuest().getPrenom()));
 				}
 				if(setTagChecker) {
+					List<String> tagCheckerList = tagChecks.stream().filter(tagCheck -> tagCheck.getTagChecker() != null)
+						    .map(tagCheck -> tagCheck.getTagChecker().getUserApp().getEppn())
+						    .collect(Collectors.toList());
+					Map<String, LdapUser> mapTagCheckerLdapUsers = ldapService.getLdapUsersFromNumList(tagCheckerList, "eduPersonPrincipalName");
 					if(tc.getTagChecker()!=null) {
-						List<LdapUser> ldapUsers = ldapUserRepository.findByEppnEquals(tc.getTagChecker().getUserApp().getEppn());
-						if(!ldapUsers.isEmpty()) {
-							LdapUser ldapUser = ldapUsers.get(0);
+						if(!mapTagCheckerLdapUsers.isEmpty()) {
+							LdapUser ldapUser = mapTagCheckerLdapUsers.get(tc.getTagChecker().getUserApp().getEppn());
 							tc.getTagChecker().getUserApp().setNom(ldapUser.getName());
 							tc.getTagChecker().getUserApp().setPrenom(ldapUser.getPrenom());
 						}else {
@@ -513,10 +534,13 @@ public class TagCheckService {
 					}
 				}
 				if(setProxy) {
+					List<String> tcProxyList = tagChecks.stream().filter(tagCheck -> tagCheck.getProxyPerson() != null)
+						    .map(tagCheck -> tagCheck.getProxyPerson().getEppn())
+						    .collect(Collectors.toList());
+					Map<String, LdapUser> mapTcProxyLdapUsers = ldapService.getLdapUsersFromNumList(tcProxyList, "eduPersonPrincipalName");
 					if(tc.getProxyPerson()!=null) {
-						List<LdapUser> ldapUsers = ldapUserRepository.findByEppnEquals(tc.getProxyPerson().getEppn());
-						if(!ldapUsers.isEmpty()) {
-							LdapUser ldapUser = ldapUsers.get(0);
+						if(!mapTcProxyLdapUsers.isEmpty()) {
+							LdapUser ldapUser = mapTcProxyLdapUsers.get(tc.getProxyPerson().getEppn());
 							tc.getProxyPerson().setNom(ldapUser.getName());
 							tc.getProxyPerson().setPrenom(ldapUser.getPrenom());
 						}else {
@@ -532,17 +556,21 @@ public class TagCheckService {
 	
 	public String snTagChecks(List<Long> tagCheckIds){
 		
-		List<String> snTagChecks = new ArrayList<String>();
+		List<String> snTagChecks = new ArrayList<>();
 		
 		if(!tagCheckIds.isEmpty()) {
+			List<TagCheck> tcs = new ArrayList<>();
 			for(Long id : tagCheckIds) {
-				TagCheck tc =tagCheckRepository.findById(id).get();
+				tcs.add(tagCheckRepository.findById(id).get());
+			}
+			List<String> tcList = tcs.stream().filter(tc->tc.getPerson()!=null).map(tagCheck -> tagCheck.getPerson().getEppn())
+									.collect(Collectors.toList());
+			Map<String, LdapUser> mapLdapUsers = ldapService.getLdapUsersFromNumList(tcList, "eduPersonPrincipalName");
+			for(TagCheck tc : tcs) {
 				String sn = "";
-				if(tc.getPerson()!=null) {
-					List<LdapUser> ldapUsers = ldapUserRepository.findByEppnEquals(tc.getPerson().getEppn());
-					if(!ldapUsers.isEmpty()) {
-						sn = ldapUsers.get(0).getPrenom().concat(" ").concat(ldapUsers.get(0).getName());
-					}
+				LdapUser ldapUser = mapLdapUsers.get(tc.getPerson().getEppn());
+				if(ldapUser!=null) {
+					sn = ldapUser.getPrenom().concat(" ").concat(ldapUser.getName());
 				}else if(tc.getGuest()!=null){
 					sn = tc.getGuest().getPrenom().concat(" ").concat(tc.getGuest().getNom());
 				}
@@ -603,30 +631,33 @@ public class TagCheckService {
 	public void sendEmailConvocation (String subject, String bodyMsg, boolean isSendToManager, List<Long> listeIds, String htmltemplatePdf, String emargementContext, boolean isAll, Long seId) throws Exception {
 		if(!listeIds.isEmpty() || isAll) {
 			int i=0; int j=0; 
-			ArrayList<String> errors = new ArrayList<String>();
+			ArrayList<String> errors = new ArrayList<>();
 			String[] ccArray = {};
 			if(isSendToManager){
 				List<String> managers = appliConfigService.getListeGestionnaires();
 				ccArray = managers.stream().toArray(String[]::new);
 			}
 			//Get ListId from all
+			List<TagCheck> tcs = new ArrayList<>();
 			if(isAll) {
-				List<TagCheck> listTc = tagCheckRepository.findTagCheckBySessionEpreuveIdAndSessionLocationExpectedIsNotNullOrderByPersonEppn(seId);
-				listeIds = listTc.stream().map(tc -> tc.getId()).distinct().collect(Collectors.toList());
+				tcs = tagCheckRepository.findTagCheckBySessionEpreuveIdAndSessionLocationExpectedIsNotNullOrderByPersonEppn(seId);
+			}else {
+				for(Long id : listeIds) {
+					tcs.add(tagCheckRepository.findById(id).get());
+				}
 			}
-			
-			for(Long id : listeIds) {
-				TagCheck tc = tagCheckRepository.findById(id).get();
+			List<String> tcList = tcs.stream().filter(tc->tc.getPerson()!=null).map(tagCheck -> tagCheck.getPerson().getEppn())
+					.collect(Collectors.toList());
+			Map<String, LdapUser> mapLdapUsers = ldapService.getLdapUsersFromNumList(tcList, "eduPersonPrincipalName");
+			for(TagCheck tc : tcs) {
 				String email =  "";
 				try {
-					if(tc.getPerson() != null){
-						List<LdapUser> ldapUsers = ldapUserRepository.findByEppnEquals(tc.getPerson().getEppn());
-						if(!ldapUsers.isEmpty()) {
-							tc.getPerson().setNom(ldapUsers.get(0).getName());
-							tc.getPerson().setPrenom(ldapUsers.get(0).getPrenom());
-							tc.getPerson().setCivilite(ldapUsers.get(0).getCivilite());
-							email = ldapUsers.get(0).getEmail();
-						}
+					LdapUser ldapUser = mapLdapUsers.get(tc.getPerson().getEppn());
+					if(ldapUser != null){
+						tc.getPerson().setNom(ldapUser.getName());
+						tc.getPerson().setPrenom(ldapUser.getPrenom());
+						tc.getPerson().setCivilite(ldapUser.getCivilite());
+						email = ldapUser.getEmail();
 					}else if(tc.getGuest() != null){
 						email = tc.getGuest().getEmail();
 					}
@@ -703,7 +734,7 @@ public class TagCheckService {
 					Long totalPresent = tagCheckRepository.countTagCheckBySessionLocationExpected (sessionLocationBadged);
 					String msgError = "";
 					TagCheck newTagCheck = new TagCheck();
-					Long count = new Long(0);
+					Long count = 0L;
 					if(isSessionLibre) {
 						try {
 							if(totalPresent >= sessionLocationBadged.getCapacite()) {
@@ -723,7 +754,7 @@ public class TagCheckService {
 									msgError = eppn;
 								}
 								isOk = true;
-								dataEmitterService.sendData(newTagCheck, new Float(0), count, new SessionLocation(), msgError);
+								dataEmitterService.sendData(newTagCheck, 0f, count, new SessionLocation(), msgError);
 							}
 						} catch (Exception e) {
 							log.error("Session libre, problème de carte pour l'eppn : "  + eppn, e);
@@ -777,7 +808,7 @@ public class TagCheckService {
 						log.info("On enregistre l'inconnu dans la session : " +  eppn);
 						if(sl != null || seId != null || isUnknown) {
 							TagCheck newTc = saveUnknownTagCheck(comment, ctx, eppn, sessionEpreuve, sessionLocationBadged, tagChecker, isSessionLibre, TypeEmargement.CARD);
-							dataEmitterService.sendData(newTc, new Float(0), new Long(0), new SessionLocation(), "");
+							dataEmitterService.sendData(newTc, 0f, 0L, new SessionLocation(), "");
 						}
 					} catch (Exception e) {
 						log.error("Problème de carte pour l'eppn : "  + eppn, e);
@@ -820,10 +851,10 @@ public class TagCheckService {
 				    	presentTagCheck.setNbBadgeage(this.getNbBadgeage(presentTagCheck, true));
 				    	Long countPresent = tagCheckRepository.countTagCheckBySessionLocationExpectedAndSessionLocationBadgedIsNotNull(sl);
 				    	sl.setNbPresentsSessionLocation(countPresent);
-				    	List<TagChecker> tcList = new ArrayList<TagChecker>();
+				    	List<TagChecker> tcList = new ArrayList<>();
 			        	tcList.add(presentTagCheck.getTagChecker());
 				    	tagCheckerService.setNomPrenom4TagCheckers(tcList);
-				    	List<TagCheck> tagCheckList = new ArrayList<TagCheck>();
+				    	List<TagCheck> tagCheckList = new ArrayList<>();
 				    	tagCheckList.add(presentTagCheck);
 				    	setNomPrenomTagChecks(tagCheckList, false, false);
 				    	tagCheckRepository.save(presentTagCheck);
@@ -838,7 +869,7 @@ public class TagCheckService {
 			    	Long totalExpected = tagCheckRepository.countBySessionLocationExpectedId(slExpected);
 			    	float percent = 0;
 			    	if(totalExpected!=0) {
-			    		percent = 100*(new Long(totalPresent).floatValue()/ new Long(totalExpected).floatValue() );
+			    		percent = 100*(Long.valueOf(totalPresent).floatValue()/ Long.valueOf(totalExpected).floatValue() );
 			    	}
 			    	presentTagCheck.setIsBlacklisted(isBlacklisted);
 			    	dataEmitterService.sendData(presentTagCheck, percent, totalPresent, sl, msgError);
@@ -851,7 +882,7 @@ public class TagCheckService {
 	public TagCheck saveUnknownTagCheck(String comment, Context ctx, String eppn, SessionEpreuve sessionEpreuve, SessionLocation sessionLocationBadged, 
 				TagChecker tagChecker, boolean isSessionLibre, TypeEmargement typeEmargement) {
 		TagCheck unknownTc = null;
-		List<TagCheck> badgedTcs = new ArrayList<TagCheck>();
+		List<TagCheck> badgedTcs = new ArrayList<>();
 		//rm!!   Long sessionLocationId = tagCheckRepository.getSessionLocationIdExpected(eppn, sessionEpreuve.getDateExamen(),sessionEpreuve.getId());
 		if(isSessionLibre) {
 			if(typeEmargement.name().startsWith(TypeEmargement.QRCODE.name())) {
@@ -1218,7 +1249,7 @@ public class TagCheckService {
 				String [] headers = {"Session", "Date", "Numéro Etu", "Eppn", "Nom", "Prénom", "Présent", "Emargement", "Type", "Lieu attendu", "Lieu badgé", "Exempt", "Tiers-temps"};
 				writer.writeNext(headers);
 				for(TagCheck tc : list) {
-					List <String> line = new ArrayList<String>();
+					List <String> line = new ArrayList<>();
 					String dateSession = String.format("%1$td-%1$tm-%1$tY", tc.getSessionEpreuve().getDateExamen());
 					String dateFin = (tc.getSessionEpreuve().getDateFin() != null)? " / " + String.format("%1$td-%1$tm-%1$tY", tc.getSessionEpreuve().getDateFin()) : "";
 	        		String presence = "Absent";
@@ -1318,7 +1349,7 @@ public class TagCheckService {
 	
 	public List<Location> searchRepartition(Long id){
 		
-		List<Location> searchRepartition = new ArrayList<Location>();
+		List<Location> searchRepartition = new ArrayList<>();
 		
 		List<TagCheck> tcs = tagCheckRepository.findTagCheckBySessionEpreuveId(id);
 		
@@ -1338,7 +1369,7 @@ public class TagCheckService {
 	}
 	
 	public Long countTagchecks(String tempsAmenage, String eppn, Long id, Long repartitionId) {
-		Long count = new Long (0);
+		Long count = 0L;
     	if("tiers".equals(tempsAmenage)) {
     		if(eppn.isEmpty() && repartitionId == null) {
 	    		count = tagCheckRepository.countTagCheckBySessionEpreuveIdAndIsTiersTempsTrue(id);
@@ -1478,7 +1509,7 @@ public class TagCheckService {
 				tc.setPerson(p);
 				tc.getSessionEpreuve().setDateArchivage(new Date());
 				tc.getSessionEpreuve().setLoginArchivage(loginArchivage);
-				tc.getSessionEpreuve().setStatut(Statut.CLOSED);;
+				tc.getSessionEpreuve().setStatut(Statut.CLOSED);
 				tagCheckRepository.save(tc);
 			}
 		}
@@ -1520,7 +1551,7 @@ public class TagCheckService {
 	
 	public List<TagCheckBean> getBeansFromTagChecks(List<TagCheck> tagChecks){
 		
-		List<TagCheckBean> beans = new ArrayList<TagCheckBean>();
+		List<TagCheckBean> beans = new ArrayList<>();
 		DateFormat dateFormat = new SimpleDateFormat("dd-MM-yyyy hh:mm");  
 		
 		if(!tagChecks.isEmpty()) {
@@ -1710,9 +1741,7 @@ public class TagCheckService {
 			if (signature) {
 				pdfBytes = byteArrayOutputStream.toByteArray();
 			}
-			
 
 			return pdfBytes;
 	}
-	
 }
